<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/primary"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/archivo_black"
            android:text="@string/app_lockdown"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/choice_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:layout_marginTop="-45sp"
        android:layout_marginEnd="16sp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        android:weightSum="2"
        android:elevation="4dp"
        >
        <!-- Left CardView -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/custom_background_left_rounded"
            android:padding="16sp">

            <TextView
                android:id="@+id/select_tv_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_the"
                android:textColor="@color/secondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/apps_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apps"
                android:textColor="@color/primary"
                android:textSize="23sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/select_tv_app" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/custom_background_right_rounded"
            android:padding="16sp">

            <TextView
                android:id="@+id/select_tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_the"
                android:textColor="@color/secondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/time_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textColor="@color/custom_black"
                android:textSize="23sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/select_tv_time" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
<androidx.appcompat.widget.SearchView
    android:id="@+id/search"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/choice_tv"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_margin="16dp"
    app:iconifiedByDefault="false"
    app:searchHintIcon="@null"
    android:focusable="false"
    app:queryHint="Search..."
    app:submitBackground="@null"
    app:queryBackground="@null"
    app:searchIcon="@drawable/baseline_search_24"
    app:closeIcon="@drawable/baseline_cancel_24"
    android:background="@drawable/custom_searchbar_background"
    />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/installedAppRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/search"
        app:layout_constraintBottom_toTopOf="@id/btn_next"
        tools:listitem="@layout/recycler_item_view"
        />
   <com.google.android.material.button.MaterialButton
       android:id="@+id/btn_next"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
       android:backgroundTint="@color/primary"
       android:layout_marginVertical="8dp"
       android:layout_marginHorizontal="16dp"
       app:cornerRadius="8dp"
       android:padding="12dp"
       android:text="@string/select_time"
       android:textSize="16sp"
       android:fontFamily="@font/archivo_black"
       android:visibility="gone"
       />
</androidx.constraintlayout.widget.ConstraintLayout>